--- a/install
+++ b/install
@@ -3,7 +3,10 @@
 DOTFILES=$(cd $(dirname "${BASH_SOURCE[0]}") && pwd)
 
 rm -rf $HOME/.zshrc
-ln -s $DOTFILES/.zshrc $HOME/.zshrc
+ln -s $DOTFILES/zsh/.zshrc $HOME/.zshrc
+
+rm -rf $HOME/.zsh_functions
+ln -s $DOTFILES/zsh/.zsh_functions $HOME/.zsh_functions
 
 rm -rf $HOME/.config/alacritty
 ln -s $DOTFILES/alacritty $HOME/.config/alacritty
